[package]
name = "hello_remote_world"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]

[[bin]]
name = "hello_remote_world"
path = "main.rs"

[[bin]]
name = "ch04"
path = "ex04/examples/ch04_01_unit.rs"

[[bin]]
name = "ch05_result"
path = "ex05/ch05_11_results.rs"

[[bin]]
name = "ch05_type"
path = "ex05/ch05_12_type_alias.rs"

[[bin]]
name = "ch05_struct1"
path = "ex05/ch05_13_struct1.rs"

[[bin]]
name = "ch05_struct2"
path = "ex05/ch05_14_struct2.rs"

[[bin]]
name = "ch05_enum1"
path = "ex05/ch05_18_enum1.rs"

[[bin]]
name = "ch05_adv"
path = "ex05/ch05_20_adv_types1.rs"