[package]
name = "puzzle"
version = "0.1.0"
authors = ["juryokun <capeta.kozo@gmail.com>"]
edition = "2018"

[[bin]]
name = "q01"
path = "first/q01.rs"

[[bin]]
name = "q02"
path = "first/q02.rs"

[[bin]]
name = "q04"
path = "first/q04.rs"

[[bin]]
name = "q06"
path = "first/q06.rs"

[[bin]]
name = "q07"
path = "first/q07.rs"

[[bin]]
name = "q08"
path = "first/q08.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "^0.4"
chrono = "0.4"