[package]
name = "toy-vec"
version = "0.1.0"
authors = ["juryokun <capeta.kozo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "toyvec01"
path = "example/toy_vec_01.rs"

[[bin]]
name = "ch05_rc"
path = "example/ch05_rc.rs"