[package]
name = "sample02"
version = "0.1.0"
authors = ["juryokun <capeta.kozo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false