[package]
name = "http_request"
version = "0.1.0"
authors = ["juryokun <capeta.kozo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json"] }
serde = "1.0.127"
serde_json = "1.0.66"
tokio = { version = "1.10.0", features = ["full"] }
