[package]
name = "stop_watch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
chrono = "0.4.19"
firestore-db-and-auth = "0.6.1"
iced = { version = "0.3.0", features = ["async-std"] }
iced_futures = "0.3.0"
iced_native = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
